cmake_minimum_required(VERSION 3.16)
project(soi3)
find_package(Boost COMPONENTS REQUIRED)
find_package (Threads)
find_library(LIBRT rt REQUIRED)
set(CMAKE_CXX_STANDARD 17)
include_directories(${Boost_INCLUDE_DIRS})
link_libraries (${CMAKE_THREAD_LIBS_INIT} ${LIBRT})
add_executable(soi3 main.cpp A1Process.h A2Process.h Buffer.h Process.h semaphores.h B1Process.h B2Process.h)